@@ -1,0 +1,140 @@
+/*
+ * Licensed to Elasticsearch B.V. under one or more contributor
+ * license agreements. See the NOTICE file distributed with
+ * this work for additional information regarding copyright
+ * ownership. Elasticsearch B.V. licenses this file to you under
+ * the Apache License, Version 2.0 (the "License"); you may
+ * not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+package co.elastic.apm.agent.impl.transaction;
+
+import co.elastic.apm.agent.MockReporter;
+import co.elastic.apm.agent.MockTracer;
+import co.elastic.apm.agent.configuration.SpanConfiguration;
+import co.elastic.apm.agent.configuration.converter.TimeDuration;
+import co.elastic.apm.agent.impl.ElasticApmTracer;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.when;
+
+class FastExitSpanTest {
+
+    protected static ElasticApmTracer tracer;
+    protected static MockReporter reporter;
+
+    @BeforeAll
+    public static void setUp() {
+        MockTracer.MockInstrumentationSetup mockInstrumentationSetup = MockTracer.createMockInstrumentationSetup();
+        tracer = mockInstrumentationSetup.getTracer();
+        reporter = mockInstrumentationSetup.getReporter();
+
+        SpanConfiguration spanConfiguration = mockInstrumentationSetup.getConfig().getConfig(SpanConfiguration.class);
+        when(spanConfiguration.isSpanCompressionEnabled()).thenReturn(true);
+        when(spanConfiguration.getSpanCompressionExactMatchMaxDuration()).thenReturn(TimeDuration.of("50ms"));
+        when(spanConfiguration.getExitSpanMinDuration()).thenReturn(TimeDuration.of("50ms"));
+
+        assertThat(tracer.isRunning()).isTrue();
+    }
+
+    @AfterEach
+    void resetReporter() {
+        reporter.reset();
+    }
+
+    @Test
+    void testExitSpanBelowDuration() {
+        Transaction transaction = startTransaction();
+        try {
+            startExitSpan(transaction, 0L).end(49_999L);
+        } finally {
+            transaction.end();
+        }
+
+        assertThat(reporter.getSpans()).isEmpty();
+
+        SpanCount spanCount = reporter.getFirstTransaction().getSpanCount();
+        assertThat(spanCount.getReported().get()).isEqualTo(0);
+        assertThat(spanCount.getDropped().get()).isEqualTo(1);
+    }
+
+    @Test
+    void testCompositeExitSpanBelowDuration() {
+        Transaction transaction = startTransaction();
+        try {
+            Span span = startExitSpan(transaction, 0L);
+            span.end(10_000L);
+            startExitSpan(transaction, 10_000L).end(20_000L);
+            startExitSpan(transaction, 20_000L).end(30_000L);
+            assertThat(span.isComposite()).isTrue();
+        } finally {
+            transaction.end();
+        }
+
+        assertThat(reporter.getSpans()).isEmpty();
+
+        SpanCount spanCount = reporter.getFirstTransaction().getSpanCount();
+        assertThat(spanCount.getReported().get()).isEqualTo(0);
+        assertThat(spanCount.getDropped().get()).isEqualTo(3);
+    }
+
+    @Test
+    void testExitSpanAboveDuration() {
+        Transaction transaction = startTransaction();
+        try {
+            startExitSpan(transaction, 0L).end(50_001L);
+        } finally {
+            transaction.end();
+        }
+
+        assertThat(reporter.getSpans()).hasSize(1);
+
+        SpanCount spanCount = reporter.getFirstTransaction().getSpanCount();
+        assertThat(spanCount.getReported().get()).isEqualTo(1);
+        assertThat(spanCount.getDropped().get()).isEqualTo(0);
+    }
+
+    @Test
+    void testCompositeExitSpanAboveDuration() {
+        Transaction transaction = startTransaction();
+        try {
+            Span span = startExitSpan(transaction, 0L);
+            span.end(20_000L);
+            startExitSpan(transaction, 20_000L).end(40_000L);
+            startExitSpan(transaction, 40_000L).end(60_000L);
+            assertThat(span.isComposite()).isTrue();
+        } finally {
+            transaction.end();
+        }
+
+        assertThat(reporter.getSpans()).hasSize(1);
+
+        SpanCount spanCount = reporter.getFirstTransaction().getSpanCount();
+        assertThat(spanCount.getReported().get()).isEqualTo(1);
+        assertThat(spanCount.getDropped().get()).isEqualTo(2);
+    }
+
+    private Transaction startTransaction() {
+        return tracer.startRootTransaction(null).withName("Some Transaction");
+    }
+
+    protected Span startExitSpan(AbstractSpan<?> parent, long startTimestamp) {
+        Span span = parent.createExitSpan().withName("Some Name").withType("db").withSubtype("postgresql");
+        span.getContext().getDestination().withAddress("127.0.0.1").withPort(5432);
+        span.setStartTimestamp(startTimestamp);
+
+        return span;
+    }
+}
